# CipherSim

./: .gitignore  COMMAND_REFERENCE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.agent/rules/: ciphersim.md
config/: simulation_config.yaml
data/: common_passwords.txt  wordlist_subset.txt
src/ciphersim/: __init__.py  cli.py
src/ciphersim/core/: __init__.py  attack_simulator.py  defense_simulator.py  hash_engine.py
src/ciphersim/modules/: __init__.py  learning.py  password_analyzer.py
